[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Scripts/WalkingEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/walking_enemy_spritesheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 5.33333 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.33333, 8.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[node name="WalkingEnemy" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 27
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.66667 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )
hframes = 6
vframes = 4
frame = 6

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 2.38419e-07, 2.5 )
shape = SubResource( 2 )

[node name="walktimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/RESET = SubResource( 4 )
anims/attack = SubResource( 5 )
anims/die = SubResource( 6 )
anims/walk = SubResource( 3 )

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="walktimer" to="." method="_on_walktimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
